--- a/en/index.html
+++ b/en/index.html
@@ -6,6 +6,12 @@
     <title>Dialog of Soul</title>
 </head>
 <body>
+    <nav>
+    <a href="../en/index.html">English</a> |
+    <a href="../ru/index.html">Русский</a> |
+    <a href="../he/index.html">עברית</a>
+    </nav>
+
     <h1>Welcome to Dialog of Soul</h1>
 </body>
 </html>
