--- a/he/index.html
+++ b/he/index.html
@@ -6,6 +6,11 @@
     <title>דיאלוג הנשמה</title>
 </head>
 <body>
+    <nav>
+    <a href="../en/index.html">English</a> |
+    <a href="../ru/index.html">Русский</a> |
+    <a href="../he/index.html">עברית</a>
+    </nav>
     <h1>ברוכים הבאים לדיאלוג הנשמה</h1>
 </body>
 </html>
