--- a/ru/index.html
+++ b/ru/index.html
@@ -6,6 +6,11 @@
     <title>Диалог Души</title>
 </head>
 <body>
+    <nav>
+    <a href="../en/index.html">English</a> |
+    <a href="../ru/index.html">Русский</a> |
+    <a href="../he/index.html">עברית</a>
+    </nav>
     <h1>Добро пожаловать на сайт "Диалог Души"</h1>
 </body>
 </html>
