--- a/ru/index.html
+++ b/ru/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Диалог Души</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Подключение CSS -->
 </head>
 <body>
-    <nav>
-    <a href="../en/index.html">English</a> |
-    <a href="../ru/index.html">Русский</a> |
-    <a href="../he/index.html">עברית</a>
-    </nav>
-    <h1>Добро пожаловать на сайт "Диалог Души"</h1>
+    <!-- Шапка сайта -->
+    <header>
+        <h1>Диалог Души</h1>
+        <nav>
+            <a href="../en/index.html">English</a> |
+            <a href="../ru/index.html">Русский</a> |
+            <a href="../he/index.html">עברית</a>
+        </nav>
+    </header>
+
+    <!-- Основное содержимое -->
+    <main>
+        <!-- Раздел "О нас" -->
+        <section id="about">
+            <h2>О нас</h2>
+            <p>Мы предлагаем уникальную телесную терапию, которая помогает восстановить гармонию души и тела.</p>
+        </section>
+
+        <!-- Раздел "Услуги" -->
+        <section id="services">
+            <h2>Услуги</h2>
+            <ul>
+                <li>Массаж (60 минут) — 4000₽</li>
+                <li>Абонемент на 10 сеансов — 40000₽</li>
+                <li>Инфракрасная сауна после каждого сеанса — в подарок!</li>
+            </ul>
+        </section>
+
+        <!-- Раздел "Контакты" -->
+        <section id="contact">
+            <h2>Контакты</h2>
+            <p>Email: example@example.com</p>
+            <p>Телефон: +7 (999) 123-45-67</p>
+        </section>
+    </main>
+
+    <!-- Футер -->
+    <footer>
+        <p>© 2024 Диалог Души. Все права защищены.</p>
+    </footer>
 </body>
 </html>
