--- a/he/index.html
+++ b/he/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>דיאלוג הנשמה</title>
+    <link rel="stylesheet" href="../styles.css"> <!-- Подключение CSS -->
 </head>
 <body>
-    <nav>
-    <a href="../en/index.html">English</a> |
-    <a href="../ru/index.html">Русский</a> |
-    <a href="../he/index.html">עברית</a>
-    </nav>
-    <h1>ברוכים הבאים לדיאלוג הנשמה</h1>
+    <!-- Header -->
+    <header>
+        <h1>דיאלוג הנשמה</h1>
+        <nav>
+            <a href="../en/index.html">English</a> |
+            <a href="../ru/index.html">Русский</a> |
+            <a href="../he/index.html">עברית</a>
+        </nav>
+    </header>
+
+    <!-- Main content -->
+    <main>
+        <!-- About Us section -->
+        <section id="about">
+            <h2>עלינו</h2>
+            <p>אנו מציעים טיפול ייחודי בגוף המסייע להשיב את ההרמוניה בין הגוף והנפש.</p>
+        </section>
+
+        <!-- Services section -->
+        <section id="services">
+            <h2>שירותים</h2>
+            <ul>
+                <li>עיסוי (60 דקות) — 200 ש"ח</li>
+                <li>מנוי ל-10 טיפולים — 1,800 ש"ח</li>
+                <li>סאונה אינפרא אדומה לאחר כל טיפול — מתנה!</li>
+            </ul>
+        </section>
+
+        <!-- Contact section -->
+        <section id="contact">
+            <h2>צור קשר</h2>
+            <p>דוא"ל: example@example.com</p>
+            <p>טלפון: +972 (50) 123-4567</p>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2024 דיאלוג הנשמה. כל הזכויות שמורות.</p>
+    </footer>
 </body>
 </html>
