--- a/en/index.html
+++ b/en/index.html
@@ -4,14 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dialog of Soul</title>
+    <link rel="stylesheet" href="../styles.css"> <!-- Подключение CSS -->
 </head>
 <body>
-    <nav>
-    <a href="../en/index.html">English</a> |
-    <a href="../ru/index.html">Русский</a> |
-    <a href="../he/index.html">עברית</a>
-    </nav>
+    <!-- Header -->
+    <header>
+        <h1>Dialog of Soul</h1>
+        <nav>
+            <a href="../en/index.html">English</a> |
+            <a href="../ru/index.html">Русский</a> |
+            <a href="../he/index.html">עברית</a>
+        </nav>
+    </header>
 
-    <h1>Welcome to Dialog of Soul</h1>
+    <!-- Main content -->
+    <main>
+        <!-- About Us section -->
+        <section id="about">
+            <h2>About Us</h2>
+            <p>We offer unique body therapy to help restore harmony of the soul and body.</p>
+        </section>
+
+        <!-- Services section -->
+        <section id="services">
+            <h2>Services</h2>
+            <ul>
+                <li>Massage (60 minutes) — $50</li>
+                <li>10-session subscription — $450</li>
+                <li>Infrared sauna after each session — free!</li>
+            </ul>
+        </section>
+
+        <!-- Contact section -->
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: example@example.com</p>
+            <p>Phone: +1 (123) 456-7890</p>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2024 Dialog of Soul. All rights reserved.</p>
+    </footer>
 </body>
 </html>
