--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dialog of Soul</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dialog of Soul</title>
+    <link rel="stylesheet" href="../styles.css"> <!-- Подключение CSS -->
 </head>
 <body>
   <h1>Welcome to Dialog of Soul</h1>
@@ -15,5 +16,9 @@
       <li><a href="he/index.html">עברית</a></li>
     </ul>
   </nav>
+    <!-- Footer -->
+   <footer>
+      <p>© 2024 Dialog of Soul. All rights reserved.</p>
+  </footer>
 </body>
 </html>
