--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dialog of Soul</title>
-    <link rel="stylesheet" href="../styles.css"> <!-- Подключение CSS -->
+    <link rel="stylesheet" href="styles.css"> <!-- Подключение CSS -->
 </head>
 <body>
   <h1>Welcome to Dialog of Soul</h1>
